--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,9 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get install libwebkit2gtk-4.0-dev
+        sudo apt-get install build-essential libgtk-3-dev
+        sudo apt-get install libappindicator3-dev
         go install github.com/wailsapp/wails/v2/cmd/wails@latest
         yarn
 
