--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,28 +7,40 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: ubuntu-latest
+            asset_name: nyotepad-linux
+            build_command: |
+              sudo apt-get update
+              sudo apt-get install -y libwebkit2gtk-4.0-dev
+              sudo apt-get install -y build-essential libgtk-3-dev
+              sudo apt-get install -y libappindicator3-dev
+              go install github.com/wailsapp/wails/v2/cmd/wails@latest
+              wails build -platform linux/amd64 -o ./build/nyotepad-linux
+          - os: windows-latest
+            asset_name: nyotepad-win
+            build_command: |
+              go install github.com/wailsapp/wails/v2/cmd/wails@latest
+              wails build -platform windows/amd64 -o ./build/nyotepad-win
+          - os: macos-latest
+            asset_name: nyotepad-mac
+            build_command: |
+              go install github.com/wailsapp/wails/v2/cmd/wails@latest
+              wails build -platform darwin/amd64 -o ./build/nyotepad-mac
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v4
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get install libwebkit2gtk-4.0-dev
-        sudo apt-get install build-essential libgtk-3-dev
-        sudo apt-get install libappindicator3-dev
-        go install github.com/wailsapp/wails/v2/cmd/wails@latest
-        yarn
+    - name: Set up Go
+      uses: actions/setup-go@v4
 
-    - name: Build Wails for macOS, Windows, Linux
-      run: |
-        wails build -platform darwin/amd64 -o ./build/nyotepad-mac
-        wails build -platform windows/amd64 -o ./build/nyotepad-win
-        wails build -platform linux/amd64 -o ./build/nyotepad-linux
+    - name: Install dependencies and build
+      run: ${{ matrix.build_command }}
+      shell: bash
 
     - name: Create Release
       id: create_release
@@ -41,35 +53,13 @@ jobs:
         draft: false
         prerelease: true
 
-    - name: Upload Release Asset - Mac
-      id: upload-release-asset-mac
+    - name: Upload Release Asset
+      id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: ./build/nyotepad-mac
-        asset_name: nyotepad-mac
-        asset_content_type: application/octet-stream
-
-    - name: Upload Release Asset - Windows
-      id: upload-release-asset-win
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: ./build/nyotepad-win
-        asset_name: nyotepad-win
-        asset_content_type: application/octet-stream
-
-    - name: Upload Release Asset - Linux
-      id: upload-release-asset-linux
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: ./build/nyotepad-linux
-        asset_name: nyotepad-linux
+        asset_path: ./build/${{ matrix.asset_name }}
+        asset_name: ${{ matrix.asset_name }}
         asset_content_type: application/octet-stream
