--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,19 +7,24 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Install dependencies
+    - name: Install dependencies on Ubuntu
+      if: runner.os == 'Linux'
       run: |
-        if [[ "${{ runner.os }}" == "Linux" ]]; then
-          sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential libgtk-3-dev libappindicator3-dev
-        fi
+        sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential libgtk-3-dev libappindicator3-dev
+        go install github.com/wailsapp/wails/v2/cmd/wails@latest
+        yarn
+
+    - name: Install dependencies on Windows and macOS
+      if: runner.os == 'Windows' || runner.os == 'macOS'
+      run: |
         go install github.com/wailsapp/wails/v2/cmd/wails@latest
         yarn
 
@@ -49,7 +54,7 @@ jobs:
         tag_name: ${{ steps.get_version.outputs.VERSION }}
         release_name: Release ${{ steps.get_version.outputs.VERSION }}
         draft: false
-        prerelease: false
+        prerelease: true
 
     - name: Upload Release Asset
       id: upload-release-asset
