--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,17 +15,21 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.17  # use the specific Go version
+
     - name: Install dependencies on Ubuntu
       if: runner.os == 'Linux'
       run: |
-        go install github.com/wailsapp/wails/v2/cmd/wails@latest
+        sudo apt-get update
         sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential libgtk-3-dev libappindicator3-dev
-        yarn
 
-    - name: Install dependencies on Windows and macOS
-      if: runner.os == 'Windows' || runner.os == 'macOS'
+    - name: Install Wails and other dependencies
       run: |
         go install github.com/wailsapp/wails/v2/cmd/wails@latest
+        echo "$GOPATH/bin" >> $GITHUB_PATH
         yarn
 
     - name: Build Wails
