--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,54 +9,54 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: ubuntu-latest
+            asset_name: nyotepad-linux
+            build_command: |
+              sudo apt-get update
+              sudo apt-get install -y libwebkit2gtk-4.0-dev
+              sudo apt-get install -y build-essential libgtk-3-dev
+              sudo apt-get install -y libappindicator3-dev
+              go install github.com/wailsapp/wails/v2/cmd/wails@latest
+              yarn
+              wails build -platform linux/amd64 -o ./build/nyotepad-linux
+          - os: windows-latest
+            asset_name: nyotepad-win
+            build_command: |
+              go install github.com/wailsapp/wails/v2/cmd/wails@latest
+              yarn
+              wails build -platform windows/amd64 -o ./build/nyotepad-win
+          - os: macos-latest
+            asset_name: nyotepad-mac
+            build_command: |
+              go install github.com/wailsapp/wails/v2/cmd/wails@latest
+              yarn
+              wails build -platform darwin/amd64 -o ./build/nyotepad-mac
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Check out code
+    - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17  # use the specific Go version
+      uses: actions/setup-go@v4
 
-    - name: Install dependencies on Ubuntu
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential libgtk-3-dev libappindicator3-dev
+    - name: Install dependencies and build
+      run: ${{ matrix.build_command }}
+      shell: bash
 
-    - name: Install Wails and other dependencies
-      run: |
-        go install github.com/wailsapp/wails/v2/cmd/wails@latest
-        echo "$GOPATH/bin" >> $GITHUB_PATH
-        yarn
+    - name: Generate Tag
+      id: generate_tag
+      run: echo ::set-output name=tag::$(date +v%Y%m%d%H%M%S)
 
-    - name: Build Wails
-      run: wails build -o ./build/nyotepad-${{ runner.os }}
-
-    - name: Get the version
-      id: get_version
-      run: echo ::set-output name=VERSION::$(date +v%Y%m%d%H%M%S)
-
-    - name: Setup Git
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-
-    - name: Create and push tag
-      run: |
-        git tag ${{ steps.get_version.outputs.VERSION }}
-        git push origin ${{ steps.get_version.outputs.VERSION }}
-        
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.get_version.outputs.VERSION }}
-        release_name: Release ${{ steps.get_version.outputs.VERSION }}
+        tag_name: ${{ steps.generate_tag.outputs.tag }}
+        release_name: Release ${{ steps.generate_tag.outputs.tag }}
         draft: false
         prerelease: true
 
@@ -67,6 +67,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: ./build/nyotepad-${{ runner.os }}
-        asset_name: nyotepad-${{ runner.os }}
+        asset_path: ./build/${{ matrix.asset_name }}
+        asset_name: ${{ matrix.asset_name }}
         asset_content_type: application/octet-stream
